# subway_graphs

./: .gitignore  README.md  csv_to_json_molecules.py  gephi_trial.gephi  index_adj_list.py  node_maker.py  node_recursive_maker.py  pyproject.toml  rdkit_test.py  setup.cfg  subway_network.py  test.dot
archived/: auto_adj_list.txt  csv_to_json_molecules.py  graph.pkl  index_adj_list.py  molecule_node_auto.json  node_recursive_maker.py  pickle_to_text.py  subway_network.py  subway_network_auto.py  subway_network_build_auto.py  subway_network_search.py  subway_network_search_auto.py  test.dot
subway/auto/: accuracy_checker_full_props.py  auto_adj_list.py  csv_to_json_molecules.py  graph_auto.py  graph_auto.py.lprof  graph_search_auto.py  graph_search_auto_add_stepscore.py  subway_network_auto.py  target_to_adj_list.py
subway/basic/: adj_list_basic.pkl  adj_list_basic.py  basic.json  graph_basic.pkl  graph_basic.py  graph_search_basic.py  subway_network.py  subway_network_build.py  test.dot
subway/cli/: cli.py
subway/data/: adj_list.pkl  adj_list.txt  auto_adj_list.pkl  auto_nodes.json  auto_nodes_stepscore.json  bwd_results.csv  fwd_results.csv  graph.pkl  graph_auto.pkl  graph_step_score.pkl  index_adj_list.py  json_comparison.csv  manual_nodes.json  molecule_node_auto.json  molecule_node_basic.json  reaction_node_auto.json  reaction_node_basic.json  reaction_template_adj.pkl  reaction_template_nodes.json  reaction_template_nodes_original.json  results.csv  rxn_stepscore.csv
subway/gephi/: adj_list_gephi.pkl  auto_nodes.json  full_graph_node.gephi  (+1 more)
(+59 files in other folders)
