[metadata]
name = subway
version = 0.0.1
description = "Synthesis route scorer for planning more efficient materials development"
long_description = file: README.md
author = "Martin Seifrid", "Theophile Gaudin", "Stanley Lo"
author_email = ""
url= https://github.com/aspuru-guzik-group/subway
# Did we have any license in mind?
license = MIT
keywords =  chemistry, synthesis, molecule, route, score, subway
classifiers =
    Programming Language :: Python :: 3.7


[options]
packages = find:
include_package_data = True
install_requires = 
  rich >= 10.1.0
  networkx >= 2.5.1

[options.packages.find]
exclude = 
  tests
  docs

[options.entry_points]
console_scripts =
    subway = subway:cli.entry_point

